Minor typo fixed

--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -40,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def intercala_listas(a, b):\n",
@@ -3072,7 +3074,9 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_raw, names, column_names, noobs = read_results('results/all_results96.log')\n",
@@ -3090,7 +3094,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_raw, names, column_names, noobs = read_results('results/all_results84.log')\n",
@@ -4180,7 +4186,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_raw, names, column_names, noobs = read_results('results/BC_sex_noA_x_noage.log')\n",
@@ -4667,7 +4675,9 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_raw, names, column_names, noobs = read_results('results/all_results_sex.log')\n",
@@ -4684,7 +4694,9 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_raw, names, column_names, noobs = read_results('results/all_results_sex_noA.log')\n",
@@ -4708,7 +4720,9 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_raw, names, column_names, noobs = read_results('results/all_results_educ.log')\n",
@@ -4819,7 +4833,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_raw, names, column_names, noobs = read_results('results/all_results_educ_96_noA_x.log')\n",
@@ -5702,7 +5718,9 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "final_table, means_table = read_descriptive_stats('results/descriptive_stats84_noA.log')\n",
@@ -5712,7 +5730,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_raw = np.zeros((5,11,14))\n",
@@ -5786,21 +5806,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
