--- a/tables_appendix.ipynb
+++ b/tables_appendix.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# importing libraries\n",
@@ -31,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def intercala_listas(a, b):\n",
@@ -262,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,9 +289,9 @@
       "                 &     (0.01) &      (0.01) &      (0.01) &      (0.00) \\\\\n",
       "$\\hat{\\sigma}_c$ &       1.64 &        1.64 &        1.64 &        1.64 \\\\\n",
       "                 &     (1.23) &      (1.09) &      (0.56) &      (0.49) \\\\\n",
-      "$\\hat{\\sigma}_e$ &      -0.60 &       -0.50 &        0.77 &        0.90 \\\\\n",
+      "$\\hat{\\sigma}_e$ &      -0.63 &       -0.51 &        0.74 &        0.87 \\\\\n",
       "                 &    (-0.47) &     (-0.34) &      (0.25) &      (0.26) \\\\\n",
-      "$\\hat{\\sigma}_b$ &       0.29 &        0.36 &        0.52 &        0.78 \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.31 &        0.37 &        0.54 &        0.79 \\\\\n",
       "                 &     (0.23) &      (0.24) &      (0.18) &      (0.24) \\\\\n",
       "N                &     441650 &      400714 &      672456 &      873268 \\\\\n",
       "n                &    441,650 &     400,714 &     672,456 &     873,268 \\\\\n",
@@ -301,7 +305,7 @@
     "table_raw, names, column_names, noobs = read_results('results/all_results96.log')\n",
     "names_latex = format_names(names)\n",
     "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
-    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
+    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e2','lpsig_e','lsig_b2','lpsig_b']\n",
     "parenthesis_names = ['psig_c','psig_e','psig_b','lpsig_x','plsig_c','lpsig_e','lpsig_b']\n",
     "# table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
     "names[6] = 'lsig_co'\n",
@@ -331,7 +335,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# table_raw, names, column_names, noobs = read_results('results/all_results96.log')\n",
+    "# names_latex = format_names(names)\n",
+    "# final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
+    "#                      'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e2','lpsig_e','lsig_b2','lpsig_b']\n",
+    "# parenthesis_names = ['psig_c','psig_e','psig_b','lpsig_x','plsig_c','lpsig_e','lpsig_b']\n",
+    "# # table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
+    "# names[6] = 'lsig_co'\n",
+    "# AllTab = pd.DataFrame(table_raw[1:,:].T, index=names, columns=column_names)\n",
+    "\n",
+    "# # rows\n",
+    "# AllTab = AllTab.T\n",
+    "# AllTab['plsig_c'] = AllTab['lsig_c']/AllTab['lsig_y2']\n",
+    "# AllTab = AllTab[final_names]\n",
+    "\n",
+    "# AllTab['N'] = np.array(noobs)\n",
+    "\n",
+    "# #columns\n",
+    "# AllTab = AllTab.T\n",
+    "# AllTab = AllTab[['Raw','LTU','STU+SpellAdj','NE+SpellAdj']]\n",
+    "# AllTab = AllTab.rename(columns={'STU+SpellAdj':'STU','NE+SpellAdj':\"NE\"})\n",
+    "# for name in final_names:\n",
+    "#     if name in parenthesis_names:\n",
+    "#         AllTab.loc[name]= AllTab.loc[name].apply(lambda x: \"({:,.2f})\".format(float(x)))\n",
+    "#     else:\n",
+    "#         AllTab.loc[name]= AllTab.loc[name].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "# AllTab.loc['n'] = AllTab.loc['N'].apply(lambda x: \"{:,.0f}\".format(float(x)))\n",
+    "\n",
+    "# AllTab = AllTab.rename(index=dict(zip(names,names_latex)))\n",
+    "# print(AllTab.to_latex(escape=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -427,9 +468,9 @@
       "                 &     (0.01) &      (0.00) &      (0.00) &      (0.00) \\\\\n",
       "$\\hat{\\sigma}_c$ &       1.64 &        1.64 &        1.64 &        1.64 \\\\\n",
       "                 &     (1.05) &      (0.98) &      (0.73) &      (0.60) \\\\\n",
-      "$\\hat{\\sigma}_e$ &      -0.38 &       -0.35 &        0.25 &        0.59 \\\\\n",
+      "$\\hat{\\sigma}_e$ &      -0.41 &       -0.35 &        0.25 &        0.58 \\\\\n",
       "                 &    (-0.26) &     (-0.21) &      (0.11) &      (0.21) \\\\\n",
-      "$\\hat{\\sigma}_b$ &       0.31 &        0.38 &        0.34 &        0.48 \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.32 &        0.38 &        0.34 &        0.49 \\\\\n",
       "                 &     (0.20) &      (0.23) &      (0.15) &      (0.18) \\\\\n",
       "N                &     421054 &      381522 &      554766 &      735266 \\\\\n",
       "n                &    421,054 &     381,522 &     554,766 &     735,266 \\\\\n",
@@ -443,7 +484,7 @@
     "table_raw, names, column_names, noobs = read_results('results/all_results96_15.log')\n",
     "names_latex = format_names(names)\n",
     "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
-    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
+    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e2','lpsig_e','lsig_b2','lpsig_b']\n",
     "parenthesis_names = ['psig_c','psig_e','psig_b','lpsig_x','plsig_c','lpsig_e','lpsig_b']\n",
     "# table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
     "names[6] = 'lsig_co'\n",
@@ -473,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -496,9 +537,9 @@
       "                 &     (0.00) &      (0.00) &      (0.00) &      (0.00) \\\\\n",
       "$\\hat{\\sigma}_c$ &       1.64 &        1.64 &        1.64 &        1.64 \\\\\n",
       "                 &     (1.08) &      (1.00) &      (0.85) &      (0.71) \\\\\n",
-      "$\\hat{\\sigma}_e$ &      -0.40 &       -0.33 &       -0.00 &        0.30 \\\\\n",
+      "$\\hat{\\sigma}_e$ &      -0.41 &       -0.34 &       -0.01 &        0.29 \\\\\n",
       "                 &    (-0.27) &     (-0.21) &     (-0.00) &      (0.13) \\\\\n",
-      "$\\hat{\\sigma}_b$ &       0.28 &        0.33 &        0.29 &        0.37 \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.29 &        0.33 &        0.29 &        0.38 \\\\\n",
       "                 &     (0.19) &      (0.20) &      (0.15) &      (0.16) \\\\\n",
       "N                &     374168 &      339246 &      466490 &      647060 \\\\\n",
       "n                &    374,168 &     339,246 &     466,490 &     647,060 \\\\\n",
@@ -512,7 +553,7 @@
     "table_raw, names, column_names, noobs = read_results('results/all_results96_30.log')\n",
     "names_latex = format_names(names)\n",
     "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
-    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
+    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e2','lpsig_e','lsig_b2','lpsig_b']\n",
     "parenthesis_names = ['psig_c','psig_e','psig_b','lpsig_x','plsig_c','lpsig_e','lpsig_b']\n",
     "# table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
     "names[6] = 'lsig_co'\n",
@@ -542,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -565,9 +606,9 @@
       "                 &      (0.01) &      (0.00) &      (0.01) &      (0.01) \\\\\n",
       "$\\hat{\\sigma}_c$ &        1.64 &        1.64 &        1.64 &        1.64 \\\\\n",
       "                 &      (0.55) &      (0.58) &      (0.54) &      (0.56) \\\\\n",
-      "$\\hat{\\sigma}_e$ &        0.87 &        0.69 &        0.95 &        0.74 \\\\\n",
+      "$\\hat{\\sigma}_e$ &        0.83 &        0.67 &        0.91 &        0.71 \\\\\n",
       "                 &      (0.28) &      (0.24) &      (0.30) &      (0.24) \\\\\n",
-      "$\\hat{\\sigma}_b$ &        0.45 &        0.49 &        0.45 &        0.53 \\\\\n",
+      "$\\hat{\\sigma}_b$ &        0.47 &        0.50 &        0.47 &        0.55 \\\\\n",
       "                 &      (0.16) &      (0.18) &      (0.16) &      (0.19) \\\\\n",
       "N                &     302,246 &     370,210 &     101,002 &     571,454 \\\\\n",
       "\\bottomrule\n",
@@ -581,7 +622,7 @@
     "table_raw_g, names, column_names_g, noobs_g = read_results('results/all_results_sex_96.log')\n",
     "names_latex = format_names(names)\n",
     "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
-    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
+    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e2','lpsig_e','lsig_b2','lpsig_b']\n",
     "parenthesis_names = ['psig_c','psig_e','psig_b','lpsig_x','plsig_c','lpsig_e','lpsig_b']\n",
     "\n",
     "# table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
@@ -656,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -679,9 +720,9 @@
       "                 &     (0.01) &     (0.01) \\\\\n",
       "$\\hat{\\sigma}_c$ &       1.64 &       1.64 \\\\\n",
       "                 &     (0.60) &     (0.70) \\\\\n",
-      "$\\hat{\\sigma}_e$ &       0.57 &       0.44 \\\\\n",
+      "$\\hat{\\sigma}_e$ &       0.49 &       0.40 \\\\\n",
       "                 &     (0.18) &     (0.17) \\\\\n",
-      "$\\hat{\\sigma}_b$ &       0.54 &       0.28 \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.58 &       0.30 \\\\\n",
       "                 &     (0.21) &     (0.13) \\\\\n",
       "N                &    301,482 &    332,684 \\\\\n",
       "\\bottomrule\n",
@@ -694,7 +735,7 @@
     "table_raw_bc, names, column_names_bc, noobs_bc = read_results('results/BC_all.log')\n",
     "names_latex = format_names(names)\n",
     "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
-    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
+    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e2','lpsig_e','lsig_b2','lpsig_b']\n",
     "parenthesis_names = ['psig_c','psig_e','psig_b','lpsig_x','plsig_c','lpsig_e','lpsig_b']\n",
     "names[6] = 'lsig_co'\n",
     "AllTab = pd.DataFrame(table_raw_bc[1:,:].T, index=names, columns=column_names_bc)\n",
@@ -725,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +777,7 @@
       "\\toprule\n",
       "{} &  2002-2007 &  2008-2013 &  2002-2007 &  2008-2013 \\\\\n",
       "\\midrule\n",
-      "$\\hat{\\mu}_y$    &     166.41 &     205.75 &     155.15 &     174.20 \\\\\n",
+      "$\\hat{\\mu}_y$    &     155.15 &     174.20 &     155.15 &     174.20 \\\\\n",
       "$\\hat{\\sigma}_y$ &  90,737.88 &  80,664.35 &  71,921.82 &  56,583.48 \\\\\n",
       "$\\hat{\\sigma}_c$ &  40,643.58 &  47,121.37 &  32,040.44 &  33,923.04 \\\\\n",
       "                 &     (0.45) &     (0.58) &     (0.45) &     (0.60) \\\\\n",
@@ -748,9 +789,9 @@
       "                 &     (0.01) &     (0.01) &     (0.02) &     (0.01) \\\\\n",
       "$\\hat{\\sigma}_c$ &       1.64 &       1.64 &       1.64 &       1.64 \\\\\n",
       "                 &     (0.60) &     (0.70) &     (0.57) &     (0.66) \\\\\n",
-      "$\\hat{\\sigma}_e$ &       0.53 &       0.42 &       0.78 &       0.56 \\\\\n",
+      "$\\hat{\\sigma}_e$ &       0.46 &       0.38 &       0.69 &       0.53 \\\\\n",
       "                 &     (0.17) &     (0.16) &     (0.24) &     (0.21) \\\\\n",
-      "$\\hat{\\sigma}_b$ &       0.56 &       0.27 &       0.46 &       0.28 \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.59 &       0.29 &       0.50 &       0.30 \\\\\n",
       "                 &     (0.22) &     (0.13) &     (0.17) &     (0.12) \\\\\n",
       "N                &    258,384 &    288,454 &     43,098 &     44,230 \\\\\n",
       "\\bottomrule\n",
@@ -763,7 +804,7 @@
     "table_raw_bc, names, column_names_bc, noobs_bc = read_results('results/BC_educ.log')\n",
     "names_latex = format_names(names)\n",
     "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
-    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
+    "                     'sig_x', 'lpsig_x','lsig_c','plsig_c','lsig_e2','lpsig_e','lsig_b2','lpsig_b']\n",
     "parenthesis_names = ['psig_c','psig_e','psig_b','lpsig_x','plsig_c','lpsig_e','lpsig_b']\n",
     "names[6] = 'lsig_co'\n",
     "AllTab = pd.DataFrame(table_raw_bc[1:,:].T, index=names, columns=column_names_bc)\n",
@@ -801,7 +842,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -817,21 +860,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
