Sample selection update
Now for college and over the BC

--- a/sample_selection/Sample Selection.ipynb
+++ b/sample_selection/Sample Selection.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
@@ -22,8 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def read_results(inputfile):\n",
@@ -36,7 +40,47 @@
     "    first_row = 1\n",
     "    f = open(inputfile,'r')\n",
     "    for line in f:\n",
-    "        words = line.split()"
+    "        words = line.split()\n",
+    "        \n",
+    "def read_censored_table(inputfile,keywords = ['0','1','Total'],start='obs_stu_rce',debug=False):\n",
+    "    write_tab = False\n",
+    "    rawtab = np.zeros((len(keywords)))\n",
+    "    i = 0\n",
+    "    f = open(inputfile,'r')\n",
+    "    for line in f:\n",
+    "        words = line.split()\n",
+    "        if debug:\n",
+    "            print(line)\n",
+    "        if len(words)==3 and words[0]=='Rcensored':\n",
+    "            total = int(words[2])\n",
+    "        elif len(words)>0 and words[0]==start:\n",
+    "            write_tab = True\n",
+    "        elif len(words)>0 and words[0] in keywords and write_tab:\n",
+    "            rawtab[i] = int(words[2].replace(',',''))\n",
+    "            i+=1\n",
+    "            if words[0] == 'Total':\n",
+    "                write_tab = False\n",
+    "    return rawtab\n",
+    "\n",
+    "def read_censored_table_twoway(inputfile,keywords = ['0','1','Total'],start='obs_stu_rce',debug=False):\n",
+    "    write_tab = False\n",
+    "    rawtab = np.zeros((len(keywords),2))\n",
+    "    i = 0\n",
+    "    f = open(inputfile,'r')\n",
+    "    for line in f:\n",
+    "        words = line.split()\n",
+    "        if debug:\n",
+    "            print(line)\n",
+    "        if len(words)==3 and words[0]=='Rcensored':\n",
+    "            total = int(words[2])\n",
+    "        elif len(words)>0 and words[0]==start:\n",
+    "            write_tab = True\n",
+    "        elif len(words)>0 and words[0] in keywords and write_tab:\n",
+    "            rawtab[i,0], rawtab[i,1] = int(words[2].replace(',','')),int(words[3].replace(',',''))\n",
+    "            i+=1\n",
+    "            if words[0] == 'Total':\n",
+    "                write_tab = False\n",
+    "    return rawtab"
    ]
   },
   {
@@ -80,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -91,10 +135,10 @@
       "\\toprule\n",
       "{} &  Individual obs & Share \\\\\n",
       "\\midrule\n",
-      "0     &    1.470070e+05 &   inf \\\\\n",
-      "1     &    3.362280e+05 &   inf \\\\\n",
-      "2     &    4.832350e+05 &   inf \\\\\n",
-      "Total &   2.824701e-309 &  1.00 \\\\\n",
+      "1     &        140666.0 &  0.29 \\\\\n",
+      "1+1C  &          6341.0 &  0.01 \\\\\n",
+      "2     &        336228.0 &  0.70 \\\\\n",
+      "Total &        483235.0 &  1.00 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -102,8 +146,8 @@
     }
    ],
    "source": [
-    "spell_nos = ['0','1','2','Total']\n",
-    "noobs = np.empty(4)\n",
+    "spell_nos = ['1','1+1C','2','Total']\n",
+    "noobs = np.empty(3)\n",
     "i = 0\n",
     "f = open('./spell_count.log','r')\n",
     "for line in f:\n",
@@ -111,8 +155,14 @@
     "    if len(words)>0 and words[0] in spell_nos:\n",
     "        noobs[i] = float(words[2].replace(\",\",\"\"))\n",
     "        i+=1\n",
+    "censored_noobs = read_censored_table('./Rcensored96.log')\n",
+    "noobs = np.insert(noobs, 1,censored_noobs[1])\n",
+    "noobs[0] = noobs[0]-noobs[1]\n",
+    "noobs[-1] = np.sum(noobs[:-1])\n",
+    "\n",
     "table_noobs = pd.DataFrame(noobs,index=spell_nos,columns=['Individual obs',])\n",
     "table_noobs['Share'] = table_noobs['Individual obs']/table_noobs['Individual obs'].loc['Total']\n",
+    "# table_noobs['Share']['1'] = table_noobs['Share']['1'] - table_noobs['Share']['1+1C']\n",
     "table_noobs['Share'] = table_noobs['Share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
     "print(table_noobs.to_latex())"
    ]
@@ -159,6 +209,73 @@
     "table_noobs['College share'] = table_noobs['College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
     "print(table_noobs.to_latex())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrll}\n",
+      "\\toprule\n",
+      "{} &  2002-2007 &  2008-2013 & 2002-2007 share & 2008-2013 share \\\\\n",
+      "\\midrule\n",
+      "1     &   114353.0 &   108831.0 &           0.431 &           0.374 \\\\\n",
+      "1+1C  &      180.0 &     7731.0 &           0.001 &           0.027 \\\\\n",
+      "2     &   150741.0 &   166342.0 &           0.568 &           0.572 \\\\\n",
+      "Total &   265274.0 &   290635.0 &           1.000 &           1.000 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spell_nos = ['1','1+1C','2','Total']\n",
+    "\n",
+    "noobs_0207 = read_censored_table('./spell_count0207.log',keywords = ['1','2','Total'],start='max_nup')\n",
+    "noobs_0813 = read_censored_table('./spell_count0813.log',keywords = ['1','2','Total'],start='max_nup')\n",
+    "noobs_0207c = read_censored_table('./Rcensored0207.log',keywords = ['0','1','Total'])\n",
+    "noobs_0813c = read_censored_table('./Rcensored0813.log',keywords = ['0','1','Total'])\n",
+    "\n",
+    "noobs_0207 = np.insert(noobs_0207, 1,noobs_0207c[1])\n",
+    "noobs_0207[0] = noobs_0207[0]-noobs_0207[1]\n",
+    "noobs_0207[-1] = np.sum(noobs_0207[:-1])\n",
+    "noobs_0813 = np.insert(noobs_0813, 1,noobs_0813c[1])\n",
+    "noobs_0813[-1] = np.sum(noobs_0813[:-1])\n",
+    "noobs_0813[0] = noobs_0813[0]-noobs_0813[1]\n",
+    "\n",
+    "table_noobs = pd.DataFrame(np.vstack((noobs_0207,noobs_0813)).T,index=spell_nos,columns=['2002-2007','2008-2013'])\n",
+    "table_noobs['2002-2007 share'] = table_noobs['2002-2007']/table_noobs['2002-2007'].loc['Total']\n",
+    "table_noobs['2008-2013 share'] = table_noobs['2008-2013']/table_noobs['2008-2013'].loc['Total']\n",
+    "\n",
+    "table_noobs['2002-2007 share'] = table_noobs['2002-2007 share'].apply(lambda x: \"{:,.3f}\".format(float(x)))\n",
+    "table_noobs['2008-2013 share'] = table_noobs['2008-2013 share'].apply(lambda x: \"{:,.3f}\".format(float(x)))\n",
+    "print(table_noobs.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[115597.,  25069.],\n",
+       "       [  5395.,    946.],\n",
+       "       [120992.,  26015.]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -245,8 +362,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrll}\n",
+      "\\toprule\n",
+      "{} &  Non-College &  College & Non-College share & College share \\\\\n",
+      "\\midrule\n",
+      "1     &     115597.0 &  25069.0 &              0.28 &          0.33 \\\\\n",
+      "1+C   &       5395.0 &    946.0 &              0.01 &          0.01 \\\\\n",
+      "2     &     285727.0 &  50501.0 &              0.70 &          0.66 \\\\\n",
+      "Total &     406719.0 &  76516.0 &              1.00 &          1.00 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spell_nos = ['1','1+C','2','Total']\n",
+    "noobs = np.empty((3,2))\n",
+    "i = 0\n",
+    "f = open('./spell_count_college.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "#     print(line)\n",
+    "    if len(words)>0 and words[0] in spell_nos:\n",
+    "        noobs[i,0] = float(words[2].replace(\",\",\"\"))\n",
+    "        noobs[i,1] = float(words[3].replace(\",\",\"\"))\n",
+    "        i+=1\n",
+    "censored_noobs = read_censored_table_twoway('./RCensoredCollege.log',start='obs_stu_rc')\n",
+    "\n",
+    "noobs = np.insert(noobs, 1,censored_noobs[1,:],axis=0)\n",
+    "noobs[0,:] = noobs[0,:]-noobs[1,:]\n",
+    "noobs[-1,:] = np.sum(noobs[:-1],axis=0)\n",
+    "\n",
+    "table_noobs = pd.DataFrame(noobs,index=spell_nos,columns=['Non-College','College'])\n",
+    "table_noobs['Non-College share'] = table_noobs['Non-College']/table_noobs['Non-College'].loc['Total']\n",
+    "table_noobs['College share'] = table_noobs['College']/table_noobs['College'].loc['Total']\n",
+    "table_noobs['Non-College share'] = table_noobs['Non-College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "table_noobs['College share'] = table_noobs['College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "print(table_noobs.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "spell_nos = ['1','1+1C','2','Total']\n",
+    "noobs = np.empty(3)\n",
+    "i = 0\n",
+    "f = open('./spell_count.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>0 and words[0] in spell_nos:\n",
+    "        noobs[i] = float(words[2].replace(\",\",\"\"))\n",
+    "        i+=1\n",
+    "censored_noobs = read_censored_table('./Rcensored96.log')\n",
+    "noobs = np.insert(noobs, 1,censored_noobs[1])\n",
+    "noobs[0] = noobs[0]-noobs[1]\n",
+    "noobs[-1] = np.sum(noobs[:-1])\n",
+    "\n",
+    "table_noobs = pd.DataFrame(noobs,index=spell_nos,columns=['Individual obs',])\n",
+    "table_noobs['Share'] = table_noobs['Individual obs']/table_noobs['Individual obs'].loc['Total']\n",
+    "# table_noobs['Share']['1'] = table_noobs['Share']['1'] - table_noobs['Share']['1+1C']\n",
+    "table_noobs['Share'] = table_noobs['Share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "print(table_noobs.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_sc = pd.read_csv('../results/Upper96.csv')\n",
@@ -265,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_sc_first = data_sc.loc[data_sc['n_spell_u']==1]\n",
@@ -532,7 +731,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_sc1[data_sc1.max_nup==2]"
@@ -642,21 +843,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
