--- a/tables_appendix.ipynb
+++ b/tables_appendix.ipynb
@@ -336,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# table_raw, names, column_names, noobs = read_results('results/all_results96.log')\n",
